added getAllPurchasesOfUsername